# Raygine

./: .gitignore  CMakeLists.txt  README.md  code-style.md  todo.md
_levels/level_1/map/: map.json
bash-scripts/: build.sh  clean.sh  run.sh
include/: input-manager.hpp  map-loader.hpp  map.hpp  map_loader.hpp  raygine-utils.hpp  raygine_renderer.hpp  raygine_utils.hpp  vec2.hpp
src/: map-loader.cpp  map.cpp  raygine-utils.cpp  raygine_driver.cpp  raygine_renderer.cpp  raygine_utils.cpp  raymaster_driver  raymaster_driver.cpp  vec2.cpp
test/: test-macros.hpp  test-utils.hpp  test_utils.hpp  vec2-tests.cpp  vec2_tests.cpp
